# ConUtils

./: .gitignore  README.md  STYLEGUIDE.md  pyproject.toml
src/: DVD.py  test.py
src/conutils/: Console.py  Spinner.py  __init__.py  console.py  test.json
src/conutils/_internals/: __init__.py  color.py  console.py
src/conutils/_internals/entity/: __init__.py  entity.py
src/conutils/_internals/entity/container/: __init__.py  container.py  frame.py
src/conutils/_internals/entity/elements/: __init__.py  element.py  log.py  spinner.py  text.py
src/conutils/_internals/errors/: errorcodes.json  errors.py
src/conutils/_internals/format/toolkit/: __init__.py  color.py
src/conutils/_internals/toolkit/: __init__.py  color.py  screen_compiler.py
src/conutils/_internals/toolkit/compiler/: commons.py  compiler_core.py  multiproccesor.py
src/conutils/container/: container.py
src/conutils/elements/: spinner.py
src/conutils/entity/: entity.py
src/conutils/entity/container/: container.py
src/conutils/entity/elements/: animated.py  element.py  spinner.py
tests/: __init__.py  spinner_tests.py  test_entity.py  test_spinner.py
tests/json/: spinners_1.json  spinners_2.json  spinners_3.json  spinners_4.json
